second comment done

--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ main {
   margin-bottom: 10px;
 }
 
-/* subscribe section  */
+/* ...........subscribe section.........  */
 
 .subscribe {
   text-align: center;
